# JobScraper

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.beads/: issues.jsonl
docker/: backend.Dockerfile  bootstrap-data.sh  frontend.Dockerfile  nginx.conf
scripts/: benchmark.py
src/: cli.py  linkedin.py  mycareersfuture.py  mycareersfuture_link.py  mycareersfuture_list.py  test_tor.py
src/api/: __init__.py  app.py  middleware.py  models.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/: CompanySearch.tsx  DegradedBanner.tsx  FilterPanel.tsx  JobCard.tsx  JobList.tsx  SearchBar.tsx  SearchStats.tsx  SimilarJobsModal.tsx  SkeletonCard.tsx  SkillCloud.tsx
src/frontend/src/hooks/: useSearch.ts
src/frontend/src/services/: api.ts
src/legacy/: mycareersfuture.py  mycareersfuture_links.py  mycareersfuture_list.py
src/mcf/: __init__.py  adaptive_rate.py  api_client.py  batch_logger.py  daemon.py  database.py  historical_scraper.py  migration.py  models.py  scraper.py  storage.py
src/mcf/embeddings/: __init__.py  generator.py  index_manager.py  models.py  query_expander.py  search_engine.py
tests/: __init__.py  conftest.py  factories.py  test_api_app.py  test_api_middleware.py  test_api_models.py  test_company_centroids.py  test_database.py  test_factories.py  test_index_manager.py  test_integration.py  test_models.py  test_query_expander.py  test_search_engine.py
(+1 files in other folders)
