[tool.poetry]
name = "mcf-scraper"
version = "1.0.0"
description = "API-based job scraper for MyCareersFuture.sg"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.5.0"
tenacity = "^8.2.0"
typer = {extras = ["all"], version = "^0.15.0"}
rich = "^13.7.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.30.0"

[tool.poetry.scripts]
mcf = "src.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
